--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # --------- pytorch-ie --------- #
 pytorch-ie>=0.28.0,<0.30.0
 pie-datasets>=0.7.0,<0.8.0
+pie-modules>=0.8.0,<0.9.0
 
 # --------- hydra --------- #
 hydra-core>=1.3.0
