use max_window instead of max_length

--- a/configs/taskmodule/re_text_classification_with_indices.yaml
+++ b/configs/taskmodule/re_text_classification_with_indices.yaml
@@ -2,7 +2,7 @@ _target_: pie_modules.taskmodules.RETextClassificationWithIndicesTaskModule
 
 tokenizer_name_or_path: bert-base-uncased
 add_candidate_relations: True
-max_length: 512
+max_window: 512
 ## Long sequence handling
 ## example: split the input into windows of 512 tokens that have 64 tokens overlap
 # tokenizer_kwargs:
