--- a/configs/experiment/lisa-ner.yaml
+++ b/configs/experiment/lisa-ner.yaml
@@ -45,3 +45,5 @@ model:
   model_name_or_path: ${transformer_model}
   # configure learning rate. Default learning rate is set in model constructor (here: TransformerTokenClassificationModel)
   learning_rate: 1e-5
+
+model_save_dir: ${paths.save_dir}/models/${name}/${now:%Y-%m-%d_%H-%M-%S}
