--- a/configs/experiment/lisa-ner.yaml
+++ b/configs/experiment/lisa-ner.yaml
@@ -22,7 +22,7 @@ tags: ["dataset=lisa", "model=named_entity_recognition"]
 
 seed: 12345
 
-transformer_model: bert-base-uncased
+transformer_model: dbmdz/bert-base-german-uncased
 
 trainer:
   min_epochs: 5
